--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -28,7 +29,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/**/*.ts",
-    "prisma/seed.ts"
+    "prisma/**/*"
   ],
   "exclude": ["node_modules"]
 }
