--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.5.0",
     "bcrypt": "^5.1.1",
     "framer-motion": "^12.4.10",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.2.1",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
@@ -26,6 +27,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.17.24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
