--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
