nextauth 관련 authOptions 수정: User 타입 확장, session에 커스텀user 데이터 추가 & 배송지 추가 코드 수정 & 배송지목록 렌더링

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
         "name": "next"
       }
     ],
+    "types": ["next-auth"],
     "paths": {
       "@/*": ["./src/*"]
     }
@@ -30,7 +31,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/**/*.ts",
-    "prisma/**/*"
+    "prisma/**/*",
+    "types/**/*.d.ts"
   ],
   "exclude": ["node_modules"]
 }
