--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "@tosspayments/tosspayments-sdk": "^2.3.4",
     "bcrypt": "^5.1.1",
     "framer-motion": "^12.4.10",
     "jsonwebtoken": "^9.0.2",
