--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^5.1.1",
     "framer-motion": "^12.4.10",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.488.0",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
     "prisma": "^6.5.0",
