--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
+    "slugify": "^1.6.6",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
