테스트 환경설정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
         "name": "next"
       }
     ],
-    "types": ["next-auth"],
+    "types": ["next-auth", "jest", "node"],
     "paths": {
       "@/*": ["./src/*"]
     }
