checkout page에 user 정보 불러오기

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
         "name": "next"
       }
     ],
-    "types": ["next-auth", "jest", "node"],
+    "types": ["next-auth", "jest", "node", "@testing-library/jest-dom"],
     "paths": {
       "@/*": ["./src/*"]
     },
