--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "eslint-config-next": "15.2.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "node-mocks-http": "^1.17.2",
     "tailwindcss": "^4",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
