--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,7 +45,7 @@
     "src/**/*.ts",
     "prisma/**/*",
     "types/**/*.d.ts"
-  ],
+, "eslint.config.js"  ],
   "exclude": [
     "node_modules",
     "tests",
